--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" type="text/css" href=".\public\stylesheets\style.css">
+        <link rel="stylesheet" type="text/css" href=".\dist\css\style.min.css">
         <title>Travel Page</title>
     </head>
     <body>
